--- a/BackendServer/BackendServer/appsettings.json
+++ b/BackendServer/BackendServer/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "ConnectionStrings": {
+    "HumanaidDatabase": "server=localhost; database=humanaid; user=root; password=password"
+  },
   "AllowedHosts": "*"
 }
